--- a/CustomerService/CustomerService.Api/CustomerService.Api.csproj
+++ b/CustomerService/CustomerService.Api/CustomerService.Api.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
     <UserSecretsId>6a196038-fd50-495c-a353-e82d1e555bfe</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
