--- a/CustomerService/CustomerService.Api.Service/CustomerService.Api.Service.csproj
+++ b/CustomerService/CustomerService.Api.Service/CustomerService.Api.Service.csproj
@@ -5,14 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="v1\Commands\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CustomerService.Data\CustomerService.Data.csproj" />
     <ProjectReference Include="..\CustomerService.Domain\CustomerService.Domain.csproj" />
   </ItemGroup>
 
