--- a/CustomerService/Pipelines/azure-pipelines.yml
+++ b/CustomerService/Pipelines/azure-pipelines.yml
@@ -16,10 +16,10 @@ variables:
 
 stages:
   - stage: BuildStage
-    displayName: Build Stage
+    displayName: Build Service
     jobs:
       - job: BuildJob
-        displayName: Build Job
+        displayName: Build CustomerService
         steps:
         - task: DotNetCoreCLI@2
           displayName: Restore Packages
@@ -30,13 +30,13 @@ stages:
           displayName: Build Service
           inputs:
             command: build
-            arguments: --no-restore --configuration $(buildConfiguration) 
+            arguments: --no-restore
             projects: CustomerService/**/*.csproj
         - task: DotNetCoreCLI@2
           displayName: Run Tests
           inputs:
             command: test
-            arguments: --no-restore --no-build --configuration $(buildConfiguration) 
+            arguments: --no-restore --no-build
             projects: CustomerService/*.Tests/*.csproj
         - task: DotNetCoreCLI@2
           displayName: Publish Service
@@ -44,5 +44,6 @@ stages:
             command: publish
             projects: CustomerService/CustomerService.Api/CustomerService.Api.csproj
             arguments: --configuration $(buildConfiguration) --no-restore
+            publishWebProjects: false
 
             
