--- a/CustomerService/CustomerService.Api/Dockerfile
+++ b/CustomerService/CustomerService.Api/Dockerfile
@@ -1,28 +1,7 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
-WORKDIR /src
-COPY ["CustomerService.Api/CustomerService.Api.csproj", "CustomerService.Api/"]
-COPY ["CustomerService.Domain/CustomerService.Domain.csproj", "CustomerService.Domain/"]
-COPY ["CustomerService.Api.Service/CustomerService.Api.Service.csproj", "CustomerService.Api.Service/"]
-COPY ["*.props", "./"]
-
-RUN dotnet restore "CustomerService.Domain/CustomerService.Domain.csproj"
-RUN dotnet restore "CustomerService.Api.Service/CustomerService.Api.Service.csproj"
-RUN dotnet restore "CustomerService.Api/CustomerService.Api.csproj"
-COPY . .
-WORKDIR "/src/CustomerService.Api"
-RUN dotnet build "CustomerService.Api.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "CustomerService.Api.csproj" -c Release -o /app/publish
-
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY ./bin/Release/net5.0/publish/ /app
 ENTRYPOINT ["dotnet", "CustomerService.Api.dll"]
